# glassdome

./: .dockerignore  .env.build  .gitguardian.yaml  .gitignore  .overseer_state.json  AGENT_CONTEXT.md  AUTHORS.md  BUILD_PLAN.md  CHANGELOG.md  COPYRIGHT  Dockerfile  Dockerfile.overseer  FEATURES_TODO.md  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  MANIFEST.in  Makefile  PACKAGE_GUIDE.md  PROGRESS_JOURNAL.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  RESTRUCTURE_SUMMARY.md  SESSION_SUMMARY.md  TEAM_BRIEF.md  VP_PRESENTATION_ROADMAP.md  activate.sh  alembic.ini  create_template_auto.py  docker-compose.minimal.yml  docker-compose.overseer.yml  docker-compose.yml  env.example  glassdome_start  monitor_infrastructure.py  package.json  pyproject.toml  requirements.txt  setup.py  setup.sh  (+1 more)
_deprecated/: logging_config.py  os_installer_base.py  secrets_web.py
agent_context/: AGENT_CONTEXT.md  JOURNAL_2024-11-20.md  README.md
alembic/: env.py
backend/: __init__.py  main.py
config/: ip_pools.json
configs/: README.md
containers/: env.template
deploy/: deploy-prod.sh  filebeat.yml  nginx-glassdome.conf
docs/: ADMIN_GUIDE.md  AGENTS.md  AGENT_CONTEXT.md  AGENT_EMAIL.md  API.md  API_KEYS.md  API_PERMISSIONS_REQUIRED.md  ARCHITECTURE.md  AWS_IAM_SETUP.md  AWS_IMPLEMENTATION_ASSESSMENT.md  AWS_SES_PERMISSIONS_STATUS.md  AZURE_QUICK_SETUP.md  CISCO_3850_DISCOVERY_SUMMARY.md  CISCO_SWITCH_DISCOVERY_REPORT.md  CISCO_SWITCH_VLAN_CLEANUP_PLAN.md  CLI_REFERENCE.md  CODEBASE_INVENTORY.md  CODEBASE_SUMMARY.md  CODE_AUDIT_REPORT.md  CODE_MIGRATION_REFERENCE.md  COMMUNICATIONS_ARCHITECTURE.md  COMPLETE_ARCHITECTURE.md  CURRENT_STATE.md  CURRENT_STATUS_AND_GOALS.md  DEVELOPER_ONBOARDING.md  DNS_SERVER_SETUP.md  DOCUMENTATION_CLEANUP_2024-11-22.md  EMAIL_DOMAIN_SETUP_GUIDE.md  EMAIL_NETWORK_ISSUE_DIAGNOSIS.md  ENTERPRISE_DEPLOYMENT.md  ESXI_CLOUD_INIT_SOLUTION.md  ESXI_SUCCESS.md  ESXI_TEMPLATE_STATUS.txt  FEATURE_API_KEY_MANAGEMENT.md  FRONTEND_AUDIT.md  GET_CREDENTIALS.md  GIT_SETUP.md  GLASSDOME_MARKET_POSITIONING.md  IAC_INTEGRATION.md  IMPLEMENTATION_PRIORITIES.md  (+76 more)
examples/: complex_lab_deployment.py  create_ubuntu_vm.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
glassdome/: __init__.py  cli.py  main.py  server.py
scripts/: README.md  add_file_headers.py  add_secondary_network_interface.py  add_vlan215_interfaces.sh  add_vlan215_interfaces_auto.py  add_vlan215_to_storage_network.sh  auto_boot_windows_vms.py  auto_press_cdrom_key.py  automated_windows_install.py  build_esxi_template.py  cleanup_secrets_from_files.py  complete_windows11_setup.py  configure_nexus_for_proxmox01.py  configure_nexus_standalone.py  configure_proxmox_vlan10.sh  create_ubuntu_template.sh  deploy_prod_server.py  deploy_redis_vulnerable.py  deploy_ubuntu_server.py  deploy_windows_templates.py  find_and_relocate_templates.py  find_proxmox01_ports.py  find_templates_proxmox_commands.sh  find_templates_simple.py  find_templates_standalone.py  find_templates_via_api.py  iso_manager.py  (+47 more)
(+350 files in other folders)
